<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangouts isOnline</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit login information</string>
    <string name="insertdialog">Insert user and password</string>
    <string name="login_error">There is a problem with your login information</string>
    <string name="conn_error">There is a problem with your internet connection</string>
    <string name="action_info">Info</string>
    <string name="action_sort_by_status">Sort by status</string>
    <string name="action_search">Search</string>
    <string name="info">Developed by Lorenzo Braghetto aka monossido\nhttp://lorenzobraghetto.com\nmonossido@lorenzobraghetto.com
        \nsources ara avaiable under GPLv3 license https://github.com/monossido/Hangout-isOnline</string>
    <string name="on_connect">Connected</string>
    <string name="on_friends">Downloading Friends list</string>

    <!-- status -->
    <string name="hangouts_mobile">Hangouts - from mobile or offline</string>
    <string name="hangouts_pc_away">Hangouts - Away from PC</string>
    <string name="gtalk_away">Gtalk - Away</string>
    <string name="hangouts_pc_online">Hangouts - online from PC</string>
    <string name="gtalk_online">"Gtalk - Online"</string>

</resources>